argocd/infrastructure/argocd/resources.yaml
---
# Source: argo-cd/templates/argocd-application-controller/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-metrics
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: application-controller
  name: argocd-application-controller-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8082
    targetPort: controller
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-application-controller
---
# Source: argo-cd/templates/argocd-application-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-application-controller
  labels:
    app.kubernetes.io/name: argocd-application-controller
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: application-controller
spec:
  ports:
  - name: https-controller
    port: 8082
    targetPort: 8082
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-application-controller
---
# Source: argo-cd/templates/argocd-repo-server/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-repo-server-metrics
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: repo-server
  name: argocd-repo-server-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8084
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-repo-server
---
# Source: argo-cd/templates/argocd-repo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-repo-server
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: repo-server
  name: argocd-repo-server
spec:
  ports:
  - name: https-repo-server
    protocol: TCP
    port: 8081
    targetPort: repo-server
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-repo-server
---
# Source: argo-cd/templates/argocd-server/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-server-metrics
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
  name: argocd-server-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8083
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
---
# Source: argo-cd/templates/argocd-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: server
  - name: https
    protocol: TCP
    port: 443
    targetPort: server
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
---
# Source: argo-cd/templates/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-redis
  labels:
    app.kubernetes.io/name: argocd-redis
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: argocd-redis
---
# Source: argo-cd/templates/argocd-application-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-application-controller
  labels:
    app.kubernetes.io/name: argocd-application-controller
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/version: "linux-arm-v1.8.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
      app.kubernetes.io/instance: argocd
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-application-controller
        helm.sh/chart: argo-cd-2.14.7
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/component: application-controller
        app.kubernetes.io/version: "linux-arm-v1.8.1"
    spec:
      containers:
      - command:
        - argocd-application-controller
        - --status-processors
        - "20"
        - --operation-processors
        - "10"
        - --app-resync
        - "180"
        - --repo-server
        - argocd-repo-server:8081
        - --logformat
        - text
        - --loglevel
        - info
        - --redis
        - argocd-redis:6379
        image: alinbalutoiu/argocd:linux-arm-v1.8.1
        imagePullPolicy: IfNotPresent
        name: application-controller
        ports:
        - name: controller
          containerPort: 8082
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          {}
      serviceAccountName: argocd-application-controller
---
# Source: argo-cd/templates/argocd-repo-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  labels:
    app.kubernetes.io/name: argocd-repo-server
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/version: "linux-arm-v1.8.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
      app.kubernetes.io/instance: argocd
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-repo-server
        helm.sh/chart: argo-cd-2.14.7
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/component: repo-server
        app.kubernetes.io/version: "linux-arm-v1.8.1"
    spec:
      containers:
      - name: repo-server
        image: alinbalutoiu/argocd:linux-arm-v1.8.1
        imagePullPolicy: IfNotPresent
        command:
        - uid_entrypoint.sh
        - argocd-repo-server
        - --redis
        - argocd-redis:6379
        - --logformat
        - text
        - --loglevel
        - info
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        ports:
        - name: repo-server
          containerPort: 8081
          protocol: TCP
        
        - name: metrics
          containerPort: 8084
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          {}
      serviceAccountName: default
      volumes:
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
---
# Source: argo-cd/templates/argocd-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/version: "linux-arm-v1.8.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argocd
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-server
        helm.sh/chart: argo-cd-2.14.7
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/component: server
        app.kubernetes.io/version: "linux-arm-v1.8.1"
    spec:
      containers:
      - name: server
        image: alinbalutoiu/argocd:linux-arm-v1.8.1
        imagePullPolicy: IfNotPresent
        command:
        - argocd-server
        - --staticassets
        - /shared/app
        - --repo-server
        - argocd-repo-server:8081
        - --logformat
        - text
        - --loglevel
        - info
        - --redis
        - argocd-redis:6379
        - --insecure
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        ports:
        - name: server
          containerPort: 8080
          protocol: TCP
        
        - name: metrics
          containerPort: 8083
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          {}
      serviceAccountName: argocd-server
      volumes:
      - emptyDir: {}
        name: static-files
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
---
# Source: argo-cd/templates/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
  labels:
    app.kubernetes.io/name: argocd-redis
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: redis
    app.kubernetes.io/version: "5.0.10-alpine"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-redis
        helm.sh/chart: argo-cd-2.14.7
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/component: redis
        app.kubernetes.io/version: "5.0.10-alpine"
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: argocd-redis
        args:
        - --save
        - ""
        - --appendonly
        - "no"
        image: redis:5.0.10-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        resources:
          {}
---
# Source: argo-cd/templates/argocd-server/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager"
    konghq.com/plugins: "private-service"
    kubernetes.io/ingress.class: "kong"
    kubernetes.io/tls-acme: "true"
  name: argocd-server-grpc
  labels:
    app.kubernetes.io/name: argocd-server
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
spec:
  rules:
    - host: argocd.thsp.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: 80
  tls:
    - hosts:
      - argocd.thsp.dev
      secretName: cert-manager
---
# Source: argo-cd/templates/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager"
    konghq.com/plugins: "private-service"
    kubernetes.io/ingress.class: "kong"
    kubernetes.io/tls-acme: "true"
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
    helm.sh/chart: argo-cd-2.14.7
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
spec:
  rules:
    - host: argocd.thsp.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: 80
  tls:
    - hosts:
      - argocd.thsp.dev
      secretName: argocd
